[package]
name = "clippy-clippy"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.2"           # Cross-platform clipboard handling (including images)
clap = { version = "4.4", features = ["derive"] } # Command-line argument parsing
reqwest = { version = "0.11", features = ["json", "stream"] } # HTTP client
serde = { version = "1.0", features = ["derive"] } # Serialization/Deserialization framework
serde_yaml = "0.9"        # YAML support for config files
serde_json = "1.0"        # JSON support for API communication
tokio = { version = "1", features = ["full"] } # Async runtime
base64 = "0.21"           # Base64 encoding for images
image = { version = "0.24", features = ["png"] } # Image processing (encoding to PNG)
dirs = "5.0"              # Finding user directories (config, cache, etc.)
anyhow = "1.0"            # Flexible error handling
log = "0.4"               # Logging facade
env_logger = "0.10"       # Logging implementation

# Optional: Add features for specific image formats if needed beyond PNG
# image = { version = "0.24", features = ["png", "jpeg"] }